# Perceptron

C#/: .gitignore  Neuron.cs  Program.cs
C++/: .gitignore  CMakeLists.txt  README.md
C++/src/: Answers.json  CMakeLists.txt  main.cpp  neuron.cpp  neuron.h
Crystal/: README.md  shard.yml
Crystal/spec/: perceptron_spec.cr  spec_helper.cr
Crystal/src/: perceptron.cr
Crystal/src/neuron/: neuron.cr
Go/: .gitignore  goceptron.go
Go/boolinator/: boolinator.go
Go/neuron/: neuron.go
JavaScript/: README.md  index.js  neuron.js  package.json
Kotlin/: .gitignore  build.gradle  settings.gradle
Kotlin/gradle/wrapper/: gradle-wrapper.properties
Kotlin/src/main/kotlin/: main.kt
Nim/: .gitignore  boolinator.nim  neuron.nim  perceptron.nim
Rust/: .gitignore  Cargo.toml
Rust/src/: perceptron.rs
Rust/src/neuron/: mod.rs
